--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ p {
   position: relative;
   background-color: #d3e4ed;
   text-align: center;
-  padding: 5% 10% 10% 5%;
+  padding: 5% 10%;
 }
 
 .headline {
